# aplhabot-controller

./: Dockerfile  LICENSE  Pipfile  README.md  camera-server.py  docker-compose.yml  keyboard-control.py  new-socker-server.py  pyproject.toml  socket-client.py  socket-server.py
alphabot/: __init__.py  alphabot.py
alphabot/components/: __init__.py  motor.py  servo.py
components/: motor.py  servo.py
config/: commands.json  config.json
services/: camera-steam-server.py  socket-client.py  socket-server.py
services/alphabot/: alphabot.py
services/alphabot/components/: motor.py
services/config/: __init__.py  logger.py
